crates/willikins-providers-doppler/tests/snapshots/catalog_parity__doppler_project_member_ensure_spec.snap
---
source: crates/willikins-providers-doppler/tests/catalog_parity.rs
expression: "spec_json(DopplerProjectMemberEnsure::new(test_client()).spec())"
---
{
  "class": "reversible",
  "description": "Ensure a Doppler service account is a member of a project with at least a given role on given environments.",
  "inputs": {
    "environments": {
      "required": true,
      "ty": {
        "kind": "exact",
        "type": "list<EnvironmentSlug>"
      }
    },
    "project": {
      "required": true,
      "ty": {
        "kind": "exact",
        "type": "DopplerProject"
      }
    },
    "role": {
      "required": true,
      "ty": {
        "kind": "exact",
        "type": "DopplerProjectRole"
      }
    },
    "service_account": {
      "required": true,
      "ty": {
        "kind": "exact",
        "type": "DopplerServiceAccountName"
      }
    }
  },
  "key": [
    "project",
    "service_account"
  ],
  "name": "doppler.project_member.ensure",
  "outputs": {
    "project": "DopplerProject",
    "service_account": "DopplerServiceAccountName"
  },
  "pure": false
}
