crates/willikins-providers-doppler/tests/snapshots/catalog_parity__doppler_secret_get_spec.snap
---
source: crates/willikins-providers-doppler/tests/catalog_parity.rs
expression: "spec_json(DopplerSecretGet::new(test_client()).spec())"
---
{
  "class": "reversible",
  "description": "Read a Doppler secret's value.",
  "inputs": {
    "config": {
      "required": true,
      "ty": {
        "kind": "exact",
        "type": "DopplerConfig"
      }
    },
    "name": {
      "required": true,
      "ty": {
        "kind": "exact",
        "type": "SecretName"
      }
    }
  },
  "key": [],
  "name": "doppler.secret.get",
  "outputs": {
    "value": "DopplerSecretValue"
  },
  "pure": true
}
