crates/willikins-providers-doppler/tests/snapshots/catalog_parity__doppler_secret_set_spec.snap
---
source: crates/willikins-providers-doppler/tests/catalog_parity.rs
expression: "spec_json(DopplerSecretSet::new(test_client()).spec())"
---
{
  "class": "reversible",
  "description": "Write a secret into a Doppler config. `config` must be the output of an earlier node — never a literal or a workflow input.",
  "inputs": {
    "config": {
      "derived_only": true,
      "required": true,
      "ty": {
        "kind": "exact",
        "type": "DopplerConfig"
      }
    },
    "name": {
      "required": true,
      "ty": {
        "kind": "exact",
        "type": "SecretName"
      }
    },
    "value": {
      "required": true,
      "ty": {
        "kind": "any_secret"
      }
    }
  },
  "key": [
    "config",
    "name"
  ],
  "name": "doppler.secret.set",
  "outputs": {},
  "pure": false
}
